# misc

hs-template/: flake.nix  hsproj.cabal
hs-template/src/: Lib.hs
