cabal-version:      3.0
name:               hsproj
version:            0.1.0.0
build-type:         Simple

library
  hs-source-dirs:     src
  exposed-modules:    Lib
  build-depends:      base >= 4.14 && < 5
  default-language:   Haskell2010

executable hsproj-main
  hs-source-dirs:     app
  main-is:            Main.hs
  build-depends:      base >= 4.14 && < 5
                    , hsproj
  default-language:   Haskell2010

test-suite test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base >= 4.14 && < 5
                    , hsproj
  default-language:   Haskell2010
